<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightWhite"
    tools:context=".PassportPhoto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/passTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/lineto_circular_pro_bold"
            android:text="@string/passport"
            android:textColor="@color/tan"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/relayPassImage"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginTop="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@+id/passTitle"
            android:background="@drawable/bg_peach_card"
            android:backgroundTint="@color/peach"
            android:elevation="5dp"
            android:padding="3dp">

            <ImageView
                android:id="@+id/pickedImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop" />

        </RelativeLayout>

        <TextView
            android:id="@+id/passDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/relayPassImage"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/lineto_circular_pro_medium"
            android:text="@string/imageDesc"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_pick"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passDesc"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_black_rounded"
            android:elevation="5dp"
            android:fontFamily="@font/lineto_circular_pro_bold"
            android:text="@string/image"
            android:textColor="@color/lightWhite" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_pick"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:background="@color/clear"
            android:fontFamily="@font/lineto_circular_pro_bold"
            android:text="@string/finish"
            android:onClick="callDash3"
            android:textColor="@color/tan" />

    </RelativeLayout>

</ScrollView>