<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightWhite"
    tools:context=".Report">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report"
            android:fontFamily="@font/lineto_circular_pro_bold"
            android:layout_marginTop="60dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/tan"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/lineto_circular_pro_medium"
            android:text="@string/essay"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/incident_essay"
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:layout_marginTop="140dp"
            android:textColor="@color/black"
            android:textSize="14sp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/lineto_circular_pro_book"
                android:inputType="textCapWords"
                android:layout_margin="10dp"
                android:textColor="#101010" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_black_rounded"
            android:layout_below="@+id/incident_essay"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/post"
                android:textColor="@color/lightWhite"
                android:onClick="callReport2"
                android:fontFamily="@font/lineto_circular_pro_bold"
                android:background="@color/clear" />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>