<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightWhite"
    tools:context=".SignupTwo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="160dp"
            android:fontFamily="@font/lineto_circular_pro_medium"
            android:text="@string/county"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_county"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/lineto_circular_pro_book"
                android:inputType="textCapWords"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="#101010" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lineto_circular_pro_medium"
            android:text="@string/sub"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/lineto_circular_pro_book"
                android:inputType="textCapWords"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="#101010" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lineto_circular_pro_medium"
            android:text="@string/ward"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_ward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/lineto_circular_pro_book"
                android:inputType="textCapWords"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="#101010" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lineto_circular_pro_medium"
            android:text="@string/stage"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_stage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/lineto_circular_pro_book"
                android:inputType="textCapWords"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="#101010" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lineto_circular_pro_medium"
            android:text="@string/member"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_memberId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/lineto_circular_pro_book"
                android:inputType="number"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="#101010" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lineto_circular_pro_medium"
            android:text="@string/sacco"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_sacco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/lineto_circular_pro_book"
                android:inputType="textCapWords"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="#101010" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lineto_circular_pro_medium"
            android:text="@string/chair"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_chair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/lineto_circular_pro_book"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="#101010" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lineto_circular_pro_medium"
            android:text="@string/chair2"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_chair_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/lineto_circular_pro_book"
                android:inputType="phone"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="#101010" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/next2"
                android:layout_width="135dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_black_rounded"
                android:fontFamily="@font/lineto_circular_pro_bold"
                android:onClick="callNextPili"
                android:text="@string/next_btn"
                android:textColor="@color/lightWhite"
                android:textSize="13sp"
                android:transitionName="transition_next" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>